Actualizacion rutas y swagger
