# backend/docs/swagger.json
@@ -7,12 +7,15 @@
 		"requestBodies": {},
 		"responses": {},
 		"schemas": {
-			"ResponseMessage": {
+			"ResponseMessageWithToken": {
 				"properties": {
 					"message": {
 						"type": "string"
 					},
-					"detalles": {}
+					"detalles": {},
+					"token": {
+						"type": "string"
+					}
 				},
 				"required": [
 					"message"
@@ -99,6 +102,19 @@
 				"type": "object",
 				"additionalProperties": false
 			},
+			"ResponseMessage": {
+				"properties": {
+					"message": {
+						"type": "string"
+					},
+					"detalles": {}
+				},
+				"required": [
+					"message"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
 			"Partial_UserDTO_": {
 				"properties": {
 					"username": {
@@ -166,6 +182,48 @@
 				},
 				"type": "object",
 				"description": "Make all properties in T optional"
+			},
+			"LoginResponse": {
+				"properties": {
+					"token": {
+						"type": "string"
+					},
+					"username": {
+						"type": "string"
+					},
+					"rol": {
+						"type": "string"
+					},
+					"tipoUsuario": {
+						"type": "string"
+					},
+					"rolEquipo": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"token",
+					"username",
+					"rol"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"LoginRequest": {
+				"properties": {
+					"email": {
+						"type": "string"
+					},
+					"password": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"email",
+					"password"
+				],
+				"type": "object",
+				"additionalProperties": false
 			}
 		},
 		"securitySchemes": {}
@@ -290,7 +348,7 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/ResponseMessage"
+									"$ref": "#/components/schemas/ResponseMessageWithToken"
 								}
 							}
 						}
@@ -425,6 +483,38 @@
 						}
 					}
 				]
+			}
+		},
+		"/auth/login": {
+			"post": {
+				"operationId": "Login",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/LoginResponse"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Autenticación"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/LoginRequest"
+							}
+						}
+					}
+				}
 			}
 		}
 	},
